[gd_scene load_steps=6 format=3 uid="uid://b36wxyog4w6sx"]

[ext_resource type="Script" path="res://Assets/Scripts/Menus/main_menu.gd" id="1_w18vv"]
[ext_resource type="Texture2D" uid="uid://c0lcm5tg256hh" path="res://Assets/Images/Menus/mainlogo.png" id="2_33jbp"]
[ext_resource type="Theme" uid="uid://cyvuq0oiuvgij" path="res://Assets/Fonts/MyTheme.tres" id="2_plkuc"]
[ext_resource type="AudioStream" uid="uid://dogikct6j0sri" path="res://Assets/Sfx/at_work.mp3" id="9_civ80"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w7k6o"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_w18vv")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -22.0
offset_top = -12.0
offset_right = 1178.0
offset_bottom = 676.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TitleBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/TitleBox"]
position = Vector2(576, 75)
scale = Vector2(0.747126, 0.747126)
texture = ExtResource("2_33jbp")

[node name="MenuBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Start" type="MenuButton" parent="VBoxContainer/MenuBox"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_bottom = NodePath("../HowToPlay")
focus_mode = 2
theme = ExtResource("2_plkuc")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
toggle_mode = false
text = "START"

[node name="HowToPlay" type="MenuButton" parent="VBoxContainer/MenuBox"]
visible = false
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Exit")
focus_mode = 2
theme = ExtResource("2_plkuc")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "HOW TO PLAY"

[node name="Exit" type="MenuButton" parent="VBoxContainer/MenuBox"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../HowToPlay")
focus_mode = 2
theme = ExtResource("2_plkuc")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_styles/focus = SubResource("StyleBoxEmpty_w7k6o")
text = "EXIT"

[node name="MenuButton4" type="MenuButton" parent="VBoxContainer/MenuBox"]
visible = false
layout_mode = 2
theme = ExtResource("2_plkuc")
text = "START"

[node name="MenuButton5" type="MenuButton" parent="VBoxContainer/MenuBox"]
visible = false
layout_mode = 2
theme = ExtResource("2_plkuc")
text = "START"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_civ80")
autoplay = true

[connection signal="mouse_entered" from="VBoxContainer/MenuBox/Start" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/MenuBox/Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/MenuBox/HowToPlay" to="." method="_on_how_to_play_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/MenuBox/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/MenuBox/Exit" to="." method="_on_exit_pressed"]
